--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "test": "jest",
     "test:coverage": "jest --collect-coverage",
     "test:update": "jest -u",
-    "storybook": "start-storybook -p 6006",
+    "storybook": "start-storybook -s ./public -p 6006",
     "build-storybook": "build-storybook -o ./build-storybook",
     "chmod": "chmod 755 ./bat/*",
     "checkkey": "bat/checkkey.sh",
@@ -45,6 +45,7 @@
     "@material-ui/core": "^4.12.1",
     "@material-ui/icons": "^4.11.2",
     "@material-ui/styles": "^4.11.4",
+    "@next/plugin-storybook": "^11.0.1",
     "@storybook/addon-actions": "^6.3.3",
     "@storybook/addon-essentials": "^6.3.3",
     "@storybook/addon-links": "^6.3.3",
@@ -58,6 +59,8 @@
     "@typescript-eslint/parser": "^4.28.2",
     "@wojtekmaj/enzyme-adapter-react-17": "^0.6.2",
     "autoprefixer": "^10.2.6",
+    "babel-core": "^6.26.3",
+    "babel-jest": "^27.0.6",
     "babel-loader": "^8.2.2",
     "babel-plugin-macros": "^3.1.0",
     "babel-plugin-styled-components": "^1.13.1",
