--- a/package.json
+++ b/package.json
@@ -73,7 +73,7 @@
     "postcss": "^8.3.5",
     "postcss-import": "^14.0.2",
     "styled-components": "^5.3.0",
-    "tailwind.macro": "1.0.0-alpha.10",
+    "tailwind-extended.macro": "^1.2.1",
     "tailwindcss": "^2.2.4",
     "ts-jest": "^27.0.3",
     "tsconfig-paths-webpack-plugin": "^3.5.1",
