--- a/functions/package.json
+++ b/functions/package.json
@@ -3,14 +3,15 @@
   "scripts": {
     "lint": "eslint --ext .js,.ts .",
     "build": "tsc",
-    "serve": "npm run build && firebase emulators:start --only functions",
+    "serve": "npm run kill && npm run build && npm run build -- --watch | firebase emulators:start --import ./localdata --export-on-exit ./localdata",
+    "kill": "lsof -t -i :9099 -i:5001 -i:8080 -i:9199 -i:4000 -i:4400 | xargs kill -9",
     "shell": "npm run build && firebase functions:shell",
     "start": "npm run shell",
     "deploy": "firebase deploy --only functions",
     "logs": "firebase functions:log"
   },
   "engines": {
-    "node": "14"
+    "node": "16"
   },
   "main": "lib/index.js",
   "dependencies": {
