--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "apollo-server-micro": "^3.1.2",
+    "axios": "^0.21.1",
     "next": "11.1.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
