--- a/package.json
+++ b/package.json
@@ -29,8 +29,14 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "@apollo/client": "^3.4.8",
+    "@google-cloud/storage": "^5.13.0",
     "apollo-server-micro": "^3.1.2",
     "axios": "^0.21.1",
+    "firebase": "^8.9.1",
+    "firebase-admin": "^9.11.0",
+    "graphql-tools": "^8.1.0",
+    "lodash": "^4.17.21",
     "next": "11.1.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
@@ -49,6 +55,7 @@
     "@storybook/react": "^6.3.7",
     "@types/enzyme": "^3.10.9",
     "@types/jest": "^27.0.1",
+    "@types/lodash": "^4.14.172",
     "@types/react": "17.0.18",
     "@types/react-test-renderer": "^17.0.1",
     "@types/styled-components": "^5.1.12",
