--- a/package.json
+++ b/package.json
@@ -79,6 +79,8 @@
     "husky": "^7.0.1",
     "jest": "^27.0.6",
     "jest-enzyme": "^7.1.2",
+    "jsdom": "16.6.0",
+    "jsdom-global": "3.0.2",
     "lint-staged": "^11.1.2",
     "next-pwa": "^5.3.1",
     "postcss": "^8.3.6",
