--- a/.eslintrc
+++ b/.eslintrc
@@ -29,6 +29,7 @@
     "@typescript-eslint/no-empty-interface": "off",
     "@typescript-eslint/no-var-requires": "off",
     "@next/next/no-img-element": "off",
-    "jsx-a11y/alt-text": "off"
+    "jsx-a11y/alt-text": "off",
+    "react-hooks/exhaustive-deps": "off"
   }
 }
