--- a/.babelrc
+++ b/.babelrc
@@ -10,11 +10,8 @@
         "preprocess": false
       }
     ],
-    [
-      "@babel/plugin-proposal-private-methods",
-      {
-        "loose": false
-      }
-    ]
+    ["@babel/plugin-proposal-class-properties", { "loose": true }],
+    ["@babel/plugin-proposal-private-methods", { "loose": true }],
+    ["@babel/plugin-proposal-private-property-in-object", { "loose": true }]
   ]
 }
