--- a/.eslintrc
+++ b/.eslintrc
@@ -34,6 +34,7 @@
     "jsx-a11y/alt-text": "off",
     "react-hooks/exhaustive-deps": "off",
     "import/no-named-as-default": "off",
+    "@typescript-eslint/no-non-null-assertion": "off",
     "import/order": [
       "warn",
       {
