--- a/package.json
+++ b/package.json
@@ -31,13 +31,16 @@
   },
   "dependencies": {
     "@apollo/client": "^3.4.11",
+    "@date-io/moment": "^1.3.13",
     "@google-cloud/storage": "^5.14.1",
+    "@material-ui/pickers": "^3.3.10",
     "apollo-server-micro": "^3.3.0",
     "axios": "^0.21.4",
     "firebase": "^9.0.2",
     "firebase-admin": "^9.11.1",
     "graphql-tools": "^8.2.0",
     "lodash": "^4.17.21",
+    "moment": "^2.29.1",
     "next": "11.1.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
