--- a/package.json
+++ b/package.json
@@ -30,14 +30,14 @@
     "kill": "lsof -t -i :9099 -i:8080 -i:9199 -i:4000 -i:4400 | xargs kill -9"
   },
   "dependencies": {
-    "@apollo/client": "^3.4.11",
-    "@date-io/moment": "^1.3.13",
-    "@google-cloud/storage": "^5.14.1",
+    "@apollo/client": "^3.4.15",
+    "@date-io/moment": "^2.11.0",
+    "@google-cloud/storage": "^5.14.4",
     "@material-ui/pickers": "^3.3.10",
     "apollo-server-micro": "^3.3.0",
-    "axios": "^0.21.4",
-    "firebase": "^9.0.2",
-    "firebase-admin": "^9.11.1",
+    "axios": "^0.22.0",
+    "firebase": "^9.1.1",
+    "firebase-admin": "^9.12.0",
     "graphql-tools": "^8.2.0",
     "lodash": "^4.17.21",
     "moment": "^2.29.1",
@@ -53,22 +53,22 @@
     "@material-ui/icons": "^4.11.2",
     "@material-ui/styles": "^4.11.4",
     "@next/plugin-storybook": "^11.1.2",
-    "@storybook/addon-actions": "^6.3.8",
-    "@storybook/addon-essentials": "^6.3.8",
-    "@storybook/addon-links": "^6.3.8",
-    "@storybook/react": "^6.3.8",
+    "@storybook/addon-actions": "^6.3.9",
+    "@storybook/addon-essentials": "^6.3.9",
+    "@storybook/addon-links": "^6.3.9",
+    "@storybook/react": "^6.3.9",
     "@types/enzyme": "^3.10.9",
-    "@types/jest": "^27.0.1",
-    "@types/lodash": "^4.14.172",
-    "@types/react": "17.0.20",
+    "@types/jest": "^27.0.2",
+    "@types/lodash": "^4.14.175",
+    "@types/react": "17.0.26",
     "@types/react-test-renderer": "^17.0.1",
     "@types/styled-components": "^5.1.14",
-    "@typescript-eslint/eslint-plugin": "^4.31.0",
-    "@typescript-eslint/parser": "^4.31.0",
+    "@typescript-eslint/eslint-plugin": "^4.32.0",
+    "@typescript-eslint/parser": "^4.32.0",
     "@wojtekmaj/enzyme-adapter-react-17": "^0.6.3",
-    "autoprefixer": "^10.3.4",
+    "autoprefixer": "^10.3.6",
     "babel-core": "^6.26.3",
-    "babel-jest": "^27.1.1",
+    "babel-jest": "^27.2.4",
     "babel-loader": "^8.2.2",
     "babel-plugin-macros": "^3.1.0",
     "babel-plugin-styled-components": "^1.13.2",
@@ -78,20 +78,22 @@
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-import": "^2.24.2",
     "eslint-plugin-prettier": "^4.0.0",
-    "eslint-plugin-react": "^7.25.1",
+    "eslint-plugin-react": "^7.26.1",
     "eslint-plugin-tailwind": "^0.2.1",
+    "graphql": "^15.6.0",
     "husky": "^7.0.2",
-    "jest": "^27.1.1",
+    "jest": "^27.2.4",
     "jest-enzyme": "^7.1.2",
     "jsdom": "17.0.0",
     "jsdom-global": "3.0.2",
     "lint-staged": "^11.1.2",
+    "micro": "^9.3.4",
     "next-pwa": "^5.3.1",
-    "postcss": "^8.3.6",
+    "postcss": "^8.3.8",
     "postcss-import": "^14.0.2",
     "styled-components": "^5.3.1",
     "tailwind-extended.macro": "^1.2.2",
-    "tailwindcss": "^2.2.15",
+    "tailwindcss": "^2.2.16",
     "ts-jest": "^27.0.5",
     "tsconfig-paths-webpack-plugin": "^3.5.1",
     "typescript": "4.4.3"
