--- a/package.json
+++ b/package.json
@@ -38,9 +38,9 @@
     "firebase-admin": "^9.11.0",
     "graphql-tools": "^8.1.0",
     "lodash": "^4.17.21",
-    "next": "11.1.0",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
+    "next": "^12.0.4",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "recoil": "^0.4.0"
   },
   "devDependencies": {
@@ -49,11 +49,11 @@
     "@material-ui/core": "^4.12.3",
     "@material-ui/icons": "^4.11.2",
     "@material-ui/styles": "^4.11.4",
-    "@next/plugin-storybook": "^11.1.0",
-    "@storybook/addon-actions": "^6.3.7",
-    "@storybook/addon-essentials": "^6.3.7",
-    "@storybook/addon-links": "^6.3.7",
-    "@storybook/react": "^6.3.7",
+    "@next/plugin-storybook": "^12.0.4",
+    "@storybook/addon-actions": "^6.4.0",
+    "@storybook/addon-essentials": "^6.4.0",
+    "@storybook/addon-links": "^6.4.0",
+    "@storybook/react": "^6.4.0",
     "@types/enzyme": "^3.10.9",
     "@types/jest": "^27.0.1",
     "@types/lodash": "^4.14.172",
