fix: update packages

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,20 +2,46 @@
   "compilerOptions": {
     "baseUrl": ".",
     "paths": {
-      "@test/*": ["test/*"],
-      "@locales/*": ["locales/*"],
-      "@helper/*": ["src/helper/*"],
-      "@hooks/*": ["src/hooks/*"],
-      "@constant/*": ["src/constant/*"],
-      "@recoil/*": ["src/recoil/*"],
-      "@atom/*": ["components/atom/*"],
-      "@molecule/*": ["components/molecule/*"],
-      "@organism/*": ["components/organism/*"],
-      "@template/*": ["components/template/*"],
-      "@graphql/*": ["pages/api/graphql/*"]
+      "@test/*": [
+        "test/*"
+      ],
+      "@locales/*": [
+        "locales/*"
+      ],
+      "@helper/*": [
+        "src/helper/*"
+      ],
+      "@hooks/*": [
+        "src/hooks/*"
+      ],
+      "@constant/*": [
+        "src/constant/*"
+      ],
+      "@recoil/*": [
+        "src/recoil/*"
+      ],
+      "@atom/*": [
+        "components/atom/*"
+      ],
+      "@molecule/*": [
+        "components/molecule/*"
+      ],
+      "@organism/*": [
+        "components/organism/*"
+      ],
+      "@template/*": [
+        "components/template/*"
+      ],
+      "@graphql/*": [
+        "pages/api/graphql/*"
+      ]
     },
     "target": "es5",
-    "lib": ["dom", "dom.iterable", "esnext"],
+    "lib": [
+      "dom",
+      "dom.iterable",
+      "esnext"
+    ],
     "allowJs": true,
     "skipLibCheck": true,
     "strict": true,
@@ -26,8 +52,15 @@
     "moduleResolution": "node",
     "resolveJsonModule": true,
     "isolatedModules": true,
-    "jsx": "preserve"
+    "jsx": "preserve",
+    "incremental": true
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
-  "exclude": ["node_modules"]
+  "include": [
+    "next-env.d.ts",
+    "**/*.ts",
+    "**/*.tsx"
+  ],
+  "exclude": [
+    "node_modules"
+  ]
 }
